fix footer on mobile

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -420,6 +420,8 @@ nav ul li a:hover {
         z-index: -900;
         overflow-y: scroll;
         margin-top: 80px;
+        display: flex;
+        height: calc(100% - 5em);
     }
 }
 
